--- a/MyYouthFutures/Views/Shared/PartialViews/_HelpPanel.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_HelpPanel.cshtml
@@ -5,75 +5,123 @@
             <h2 class="h2style1">Donate</h2>
         </div>
     </div>
-<div class="row donate_help">
-    <div class="col-xs-12">
-        @foreach (Help_Panel hp in Model.Help_Panel)
-        {
-            if (hp.Content_Type.Equals("title"))
+    <div class="row donate_help">
+        <div class="col-xs-12">
+            @foreach (Help_Panel hp in Model.Help_Panel)
             {
-                <p>@hp.Content_Text</p>
-                            <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
+                if (hp.Content_Type.Equals("title"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <p>@hp.Content_Text</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
             }
-        }
-    </div>
-</div>
-<div class="row media_text">
-    <div class="col-xs-12">
-        @foreach (Help_Panel hp in Model.Help_Panel)
-        {
-            if (hp.Content_Type.Equals("subTitle"))
-            {
-                <p class="mont_regular_22_darkgray">@hp.Content_Text</p>
-                            <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-        }
-    </div>
-</div>
-<section class="row more">
-    <div class="col-xs-12 col-lg-4 more_volunteer">
-        @foreach (Help_Panel hp in Model.Help_Panel)
-        {
-            if (hp.Content_Type.Equals("image1"))
-            {
-                <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
-                <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-            if (hp.Content_Type.Equals("panelText1"))
-            {
-                <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
-                            <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-        }
-    </div>
-    <div class="col-xs-12 col-lg-4 more_stories">
-        @foreach (Help_Panel hp in Model.Help_Panel)
-        {
-            if (hp.Content_Type.Equals("image2"))
-            {
-                <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
-                <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-            if (hp.Content_Type.Equals("panelText2"))
-            {
-                <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
-                            <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-        }
-    </div>
-    <div class="col-xs-12 col-lg-4 more_events">
-        @foreach (Help_Panel hp in Model.Help_Panel)
-        {
-            if (hp.Content_Type.Equals("image3"))
-            {
-                <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
-                <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-            if (hp.Content_Type.Equals("panelText3"))
-            {
-                <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
-                            <a asp-controller="Help_Panel" asp-action="Edit" asp-route-id="@hp.ID">Edit</a>
-            }
-        }
-    </div>
-</section>
         </div>
+    </div>
+    <div class="row media_text">
+        <div class="col-xs-12">
+            @foreach (Help_Panel hp in Model.Help_Panel)
+            {
+                if (hp.Content_Type.Equals("subTitle"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <p class="mont_regular_22_darkgray">@hp.Content_Text</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+            }
+        </div>
+    </div>
+    <section class="row more">
+        <div class="col-xs-12 col-lg-4 more_volunteer">
+            @foreach (Help_Panel hp in Model.Help_Panel)
+            {
+                if (hp.Content_Type.Equals("image1"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+                if (hp.Content_Type.Equals("panelText1"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+            }
+        </div>
+        <div class="col-xs-12 col-lg-4 more_stories">
+            @foreach (Help_Panel hp in Model.Help_Panel)
+            {
+                if (hp.Content_Type.Equals("image2"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+                if (hp.Content_Type.Equals("panelText2"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+            }
+        </div>
+        <div class="col-xs-12 col-lg-4 more_events">
+            @foreach (Help_Panel hp in Model.Help_Panel)
+            {
+                if (hp.Content_Type.Equals("image3"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <img src="@hp.Content_Text" title="Dollar" alt="Dollar">
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+                if (hp.Content_Type.Equals("panelText3"))
+                {
+                    <edit-container>
+                        <div class="editArea">
+                            <p class="vol_p mont_light_18_darkgray">@hp.Content_Text</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Help_Panel" route-id="@hp.ID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                }
+            }
+        </div>
+    </section>
+</div>
