--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -1,8 +1,4 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -85,8 +81,7 @@
                                 <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Contact">Contact Info</a></li>
                             </ul>
                         </li>
-                        
-                        <!--<li class="donate"><a data-toggle="modal" data-target="#loginPopup">Login</a></li>-->
+                        <li class="donate"><a data-toggle="modal" data-target="#loginPopup">Login</a></li>
                         <li class="donate"><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donate">Donate</a></li>@*TODO: This needs linked to the Media Section of the Donate Page*@
 
                     </ul>
