--- a/MyYouthFutures/Views/CalendarEvents/Create.cshtml
+++ b/MyYouthFutures/Views/CalendarEvents/Create.cshtml
@@ -1,10 +1,16 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
 
+@{
+    ViewData["Title"] = "Create";
+}
+
+<h2>Create</h2>
+
 <h4>CalendarEvent</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
@@ -42,3 +48,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
