--- a/MyYouthFutures/Views/CalendarEvents/Delete.cshtml
+++ b/MyYouthFutures/Views/CalendarEvents/Delete.cshtml
@@ -1,5 +1,12 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
 
+@{
+    ViewData["Title"] = "Delete";
+}
+
+<h2>Delete</h2>
+
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>CalendarEvent</h4>
     <hr />
@@ -7,6 +14,9 @@
         <dt>
             @Html.DisplayNameFor(model => model.name)
         </dt>
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.eventTitle)
         </dt>
@@ -32,8 +42,10 @@
             @Html.DisplayFor(model => model.info)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
