--- a/MyYouthFutures/Views/CalendarEvents/Details.cshtml
+++ b/MyYouthFutures/Views/CalendarEvents/Details.cshtml
@@ -1,6 +1,11 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
 
-<h3>Are you sure you want to delete this?</h3>
+@{
+    ViewData["Title"] = "Details";
+}
+
+<h2>Details</h2>
+
 <div>
     <h4>CalendarEvent</h4>
     <hr />
@@ -8,6 +13,9 @@
         <dt>
             @Html.DisplayNameFor(model => model.name)
         </dt>
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.eventTitle)
         </dt>
@@ -33,10 +41,8 @@
             @Html.DisplayFor(model => model.info)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
