--- a/MyYouthFutures/Views/CalendarEvents/Edit.cshtml
+++ b/MyYouthFutures/Views/CalendarEvents/Edit.cshtml
@@ -1,5 +1,11 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
 
+@{
+    ViewData["Title"] = "Edit";
+}
+
+<h2>Edit</h2>
+
 <h4>CalendarEvent</h4>
 <hr />
 <div class="row">
@@ -43,3 +49,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
