--- a/MyYouthFutures/Views/CalendarEvents/Index.cshtml
+++ b/MyYouthFutures/Views/CalendarEvents/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<MyYouthFutures.Models.CalendarEvent>
 
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h2>Index</h2>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
