--- a/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container-fluid needs">
+﻿@using Microsoft.EntityFrameworkCore
+<div class="container-fluid needs">
     <div class="row donate_help">
         <div class="col-xs-12">
             <p>LIST OF NEEDS</p>
@@ -22,7 +23,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
@@ -41,7 +42,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
@@ -58,7 +59,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
@@ -77,7 +78,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
@@ -94,7 +95,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
@@ -111,7 +112,7 @@
                         }
                     </div>
                     <edit-link is-visible="User.Identity.IsAuthenticated">
-                        <a class="editText" asp-controller="List_Item" asp-action="Index" is-visible="User.Identity.IsAuthenticated">Edit</a>
+                        <edit-a-list controller="List_Item" is-visible="User.Identity.IsAuthenticated"></edit-a-list>
                     </edit-link>
                 </edit-container>
             </ul>
