--- a/MyYouthFutures/Views/Shared/PartialViews/_Events.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Events.cshtml
@@ -65,39 +65,43 @@
 
 
         <!--Temporary, other one doesn't work yet-->
+        @foreach (Events ev in Model.Events)
+        {
         <div class="row">
             <button class="btn btn-default col-xs-12" data-toggle="collapse" data-target="#event_1" aria-expanded="false" aria-controls="cE">
                 <span class="col-xs-1"><</span>
-                <span class="col-xs-push-1 col-xs-8">name</span>
+                <span class="col-xs-push-1 col-xs-8">@ev.EventTitle</span>
                 <span class="col-xs-3">Date</span>
             </button>
             <div class="collapse col-xs-12" id="event_1">
                 <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">What</h5>
-                    <h5 class="col-xs-push-1 col-xs-10 title">eventTitle</h5>
+                    <h5 class="col-xs-push-1 col-xs-1">@ev.What</h5>
+                    <h5 class="col-xs-push-1 col-xs-10 title">@ev.EventTitle</h5>
                 </div>
 
                 <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">When</h5>
-                    <h5 class="col-xs-push-1 col-xs-10">datetime</h5>
+                    <h5 class="col-xs-push-1 col-xs-1">@ev.When</h5>
+                    @*<h5 class="col-xs-push-1 col-xs-10">datetime</h5>*@
                 </div>
 
                 <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">Where</h5>
-                    <h5 class="col-xs-push-1 col-xs-10">location</h5>
+                    <h5 class="col-xs-push-1 col-xs-1">@ev.Where</h5>
+                    @*<h5 class="col-xs-push-1 col-xs-10">location</h5>*@
                 </div>
 
                 <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">Info</h5>
-                    <h5 class="col-xs-push-1 col-xs-10">info</h5>
+                    <h5 class="col-xs-push-1 col-xs-1">@ev.Info</h5>
+                    @*<h5 class="col-xs-push-1 col-xs-10">info</h5>*@
                 </div>
             </div>
             <edit-link>
-                <edit-a controller="CalendarEvent" route-id="id"></edit-a>
+                <edit-a controller="Events" route-id="id"></edit-a>
             </edit-link>
         </div>
+
 
         <div>
         </div>
     </div>
 </div>
+        }
