--- a/MyYouthFutures/Views/Shared/PartialViews/_Events.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Events.cshtml
@@ -6,11 +6,11 @@
     <div class="row calendarHeader">
         <div class="col-xs-6" id="calendar">
             <h2 class="h2style1">CALENDAR</h2>
-            <a class="editText" asp-controller="CalendarEvent" asp-action="Create">Add Calendar Event</a>
+            <add-component controller="Events" is-visible="User.Identity.IsAuthenticated">Add Calendar Event</add-component>
         </div>
     </div>
-
-    <!--Accordian-->
+</div>
+<!--Accordian-->
 <div class="calendarEvents">
 
     @*Get all events per month*@
@@ -19,84 +19,88 @@
     }
 
     @*@foreach (CalendarEvent ev in Model.CalendarEvent)
+        {
+            for (int i = 0; i < 12; i++)
             {
-                for (int i = 0; i < 12; i++)
-                {
-                    <h2>@months[i]</h2> <!--add versatile year?-->
-                    <edit-container>
-                        if (ev.datetime.Month.Equals(i))
-                        {
-                            <div>
-                                <button class="btn btn-default col-xs-12" data-toggle="collapse" data-target="#event_@i" aria-expanded="false" aria-controls="event_@i">
-                                    <span class="col-xs-1"><</span>
-                                    <span class="col-xs-push-1 col-xs-8">@ev.name</span>
-                                    <span class="col-xs-3">@ev.datetime.Date</span>
-                                </button>
-                                <div class="collapse row" id="event_@i">
-                                    <div class="row">
-                                        <h5 class="col-xs-push-1 col-xs-1">What</h5>
-                                        <h5 class="col-xs-push-1 col-xs-10 title">eventTitle</h5>
-                                    </div>
-
-                                    <div class="row">
-                                        <h5 class="col-xs-push-1 col-xs-1">When</h5>
-                                        <h5 class="col-xs-push-1 col-xs-10">datetime</h5>
-                                    </div>
-
-                                    <div class="row">
-                                        <h5 class="col-xs-push-1 col-xs-1">Where</h5>
-                                        <h5 class="col-xs-push-1 col-xs-10">location</h5>
-                                    </div>
-
-                                    <div class="row">
-                                        <h5 class="col-xs-push-1 col-xs-1">Info</h5>
-                                        <h5 class="col-xs-push-1 col-xs-10">info</h5>
-                                    </div>
+                <h2>@months[i]</h2> <!--add versatile year?-->
+                <edit-container>
+                    if (ev.datetime.Month.Equals(i))
+                    {
+                        <div>
+                            <button class="btn btn-default col-xs-12" data-toggle="collapse" data-target="#event_@i" aria-expanded="false" aria-controls="event_@i">
+                                <span class="col-xs-1"><</span>
+                                <span class="col-xs-push-1 col-xs-8">@ev.name</span>
+                                <span class="col-xs-3">@ev.datetime.Date</span>
+                            </button>
+                            <div class="collapse row" id="event_@i">
+                                <div class="row">
+                                    <h5 class="col-xs-push-1 col-xs-1">What</h5>
+                                    <h5 class="col-xs-push-1 col-xs-10 title">eventTitle</h5>
                                 </div>
-                                <edit-link>
-                                    <edit-a controller="CalendarEvent" route-id="@ev.id"></edit-a>
-                                </edit-link>
+
+                                <div class="row">
+                                    <h5 class="col-xs-push-1 col-xs-1">When</h5>
+                                    <h5 class="col-xs-push-1 col-xs-10">datetime</h5>
+                                </div>
+
+                                <div class="row">
+                                    <h5 class="col-xs-push-1 col-xs-1">Where</h5>
+                                    <h5 class="col-xs-push-1 col-xs-10">location</h5>
+                                </div>
+
+                                <div class="row">
+                                    <h5 class="col-xs-push-1 col-xs-1">Info</h5>
+                                    <h5 class="col-xs-push-1 col-xs-10">info</h5>
+                                </div>
                             </div>
-                        }
-                    </edit-container>
-                }
-            }*@
+                            <edit-link>
+                                <edit-a controller="CalendarEvent" route-id="@ev.id"></edit-a>
+                            </edit-link>
+                        </div>
+                    }
+                </edit-container>
+            }
+        }*@
 
 
     <!--Temporary, other one doesn't work yet-->
     @foreach (Events ev in Model.Events)
     {
-        <div class="row">
-            <button class="btn btn-default col-xs-12" data-toggle="collapse" data-target="#event_1" aria-expanded="false" aria-controls="cE">
-                <span class="col-xs-1"><</span>
-                <span class="col-xs-push-1 col-xs-8">@ev.EventTitle</span>
-                <span class="col-xs-3">Date</span>
-            </button>
-            <div class="collapse col-xs-12" id="event_1">
-                <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">@ev.What</h5>
-                    <h5 class="col-xs-push-1 col-xs-10 title">@ev.EventTitle</h5>
-                </div>
 
-                <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">@ev.When</h5>
-                    @*<h5 class="col-xs-push-1 col-xs-10">datetime</h5>*@
-                </div>
+        <edit-container is-visible="User.Identity.IsAuthenticated">
+            <div class="row editArea">
+                <button class="btn btn-default col-xs-12" data-toggle="collapse" data-target="#event_1" aria-expanded="false" aria-controls="cE">
+                    <span class="col-xs-1"><</span>
+                    <span class="col-xs-push-1 col-xs-8">@ev.EventTitle</span>
+                    <span class="col-xs-3">Date</span>
+                </button>
+                <div class="collapse col-xs-12" id="event_1">
+                    <div class="row">
+                        <h5 class="col-xs-push-1 col-xs-1">@ev.What</h5>
+                        <h5 class="col-xs-push-1 col-xs-10 title">@ev.EventTitle</h5>
+                    </div>
 
-                <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">@ev.Where</h5>
-                    @*<h5 class="col-xs-push-1 col-xs-10">location</h5>*@
-                </div>
+                    <div class="row">
+                        <h5 class="col-xs-push-1 col-xs-1">@ev.When</h5>
+                        @*<h5 class="col-xs-push-1 col-xs-10">datetime</h5>*@
+                    </div>
 
-                <div class="row">
-                    <h5 class="col-xs-push-1 col-xs-1">@ev.Info</h5>
-                    @*<h5 class="col-xs-push-1 col-xs-10">info</h5>*@
+                    <div class="row">
+                        <h5 class="col-xs-push-1 col-xs-1">@ev.Where</h5>
+                        @*<h5 class="col-xs-push-1 col-xs-10">location</h5>*@
+                    </div>
+
+                    <div class="row">
+                        <h5 class="col-xs-push-1 col-xs-1">@ev.Info</h5>
+                        @*<h5 class="col-xs-push-1 col-xs-10">info</h5>*@
+                    </div>
                 </div>
+                <edit-link is-visible="User.Identity.IsAuthenticated">
+                    <edit-a controller="Events" route-id="@ev.ID" class="editText" is-visible="User.Identity.IsAuthenticated"></edit-a>
+
+                </edit-link>
+
             </div>
-            <edit-link>
-                <edit-a controller="Events" route-id="id"></edit-a>
-            </edit-link>
-        </div>
+        </edit-container>
     }
-</div>
 </div>
