--- a/MyYouthFutures/Views/CalendarEvent/Create.cshtml
+++ b/MyYouthFutures/Views/CalendarEvent/Create.cshtml
@@ -1,10 +1,11 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
 <div class="sidepage create">
+    <h2>Create</h2>
     <h4>CalendarEvent</h4>
     <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="View">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
+            <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="name" class="control-label"></label>
@@ -32,14 +33,15 @@
                     <span asp-validation-for="info" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
+    <hr />
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 </div>
 
