--- a/MyYouthFutures/Views/List_Item/Create.cshtml
+++ b/MyYouthFutures/Views/List_Item/Create.cshtml
@@ -6,10 +6,10 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>List_Item</h4>
+    <h4>List of Needs</h4> <!--List Item-->
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
@@ -23,14 +23,14 @@
                     <span asp-validation-for="LiText" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
-
+    <hr />
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 
     @section Scripts {
