--- a/MyYouthFutures/Views/Media/Create.cshtml
+++ b/MyYouthFutures/Views/Media/Create.cshtml
@@ -8,8 +8,8 @@
 
     <h4>Media</h4>
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
@@ -23,14 +23,14 @@
                     <span asp-validation-for="Content_Text" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
-
+    <hr />
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 
     @section Scripts {
