--- a/MyYouthFutures/Views/introArticles/Create.cshtml
+++ b/MyYouthFutures/Views/introArticles/Create.cshtml
@@ -6,26 +6,27 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>introArticle</h4>
+    <h4>Introduction Article</h4> <!--IntroArticles-->
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="ArticleText" class="control-label"></label>
-                    <input asp-for="ArticleText" class="form-control" />
+                    <!--<input asp-for="ArticleText" class="form-control" />-->
+                    <textarea asp-for="ArticleText" class="form-control"></textarea>
                     <span asp-validation-for="ArticleText" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
-
+    <hr />
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 
     @section Scripts {
